github pages setup

--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,9 @@
 title: Jake Stanley
 # description: >- # this means to ignore newlines until "baseurl:"
 #   Developer
+domain: jakestanley.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://jakestanley.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: madstanners
 github_username:  jakestanley
 instagram_username: madstanners
